--- a/src/popup/styles.css
+++ b/src/popup/styles.css
@@ -112,17 +112,23 @@ a.clickable:hover {
    color: var(--bs-gray-600);
 }
 
-.overflow-y-scroll {
-   overflow-y: scroll;
+.scroll-y {
+   overflow-y: auto;
 }
 
-.hide-scrollbar {
-   -ms-overflow-style: none;
-   scrollbar-width: none;
+.scroll-y::-webkit-scrollbar {
+   background: whitesmoke;
+   height: 8px;
+   width: 8px;
 }
 
-.hide-scrollbar::-webkit-scrollbar {
-   display: none;
+.scroll-y::-webkit-scrollbar-thumb {
+   background: var(--bs-gray-300);
+   border: none;
+   -webkit-border-radius: 4px;
+   border-radius: 4px;
+   -webkit-box-shadow: none;
+   box-shadow: none;
 }
 
 .fs-120 {
